# cs-yaz0

./: .gitmodules  Readme.md
.github/workflows/: nuget.yml
native/: CMakeLists.txt
native/src/: cs_vector.cpp  cs_yaz0.cpp
native/src/include/: cs_vector.h  cs_yaz0.h
src/: CsYaz0.sln
src/CsYaz0/: CsYaz0.csproj  Unmanaged.cs  Yaz0.cs
src/CsYaz0.Runner/: Assets.cs  CsYaz0.Runner.csproj  Program.cs
src/CsYaz0.Runner/Assets/: Compressed.bnchmrk  Uncompressed.bnchmrk
src/CsYaz0.Runner/Benchmarks/: Yaz0Benchmarks.cs
src/CsYaz0/Marshalling/: DataMarshal.cs
src/Tests/CsYaz0.Tests/: Assets.cs  CsYaz0.Tests.csproj  OperationsTests.cs
